feature: done with styles

--- a/src/assets/scss/var.scss
+++ b/src/assets/scss/var.scss
@@ -2,3 +2,6 @@ $white: #fff;
 $blue: #011d32;
 $lightGray: #f8f8f8;
 $lightWhite: #fefefe;
+$superLightGrey: #eeeeee;
+$darkGrey: #b1b1b1;
+$lightBlue: #e6faf0;
