--- a/src/assets/scss/app-page.scss
+++ b/src/assets/scss/app-page.scss
@@ -8,7 +8,7 @@
 
   &--main {
     width: calc(100% - 232px);
-    overflow-x: scroll;
+    overflow-y: auto;
     height: calc(100dvh - 81px);
   }
 }
