--- a/src/assets/scss/chat.scss
+++ b/src/assets/scss/chat.scss
@@ -10,6 +10,15 @@
     position: relative;
   }
 
+  &__empty {
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -30%);
+    font-size: 14px;
+    z-index: -1;
+  }
+
   &__right {
     width: calc(100% - 372px);
     position: relative;
@@ -43,6 +52,10 @@
       border-radius: 10px;
       padding: 8px;
       gap: 12px;
+      position: relative;
+      &.active {
+        background: $lightBlue;
+      }
     }
     &--img {
       width: 70px;
@@ -51,8 +64,10 @@
       object-fit: cover;
       object-position: center;
     }
+    &--content {
+      width: calc(100% - 82px);
+    }
     &--top {
-      position: relative;
       margin-bottom: 5px;
     }
     &--name {
@@ -63,8 +78,7 @@
     }
     &--timestamp {
       position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
+      top: 9px;
       right: 9px;
       font-weight: 600;
       font-size: 14px;
@@ -89,7 +103,7 @@
     overflow-y: auto;
     height: calc(100% - 130px);
     padding-top: 10px;
-
+    background: $white;
     &--inner {
       display: flex;
       flex-direction: column;
@@ -130,7 +144,7 @@
       padding: 8px 13px 28px;
       position: relative;
       color: $blue;
-      font-weight: 600;
+      font-weight: 500;
       font-size: 16px;
       line-height: 120%;
       margin-bottom: 8px;
@@ -173,10 +187,19 @@
       width: 40px;
       height: 40px;
       cursor: pointer;
-      img {
+      svg {
         display: block;
         width: 100%;
         height: 100%;
+      }
+
+      &:disabled {
+        cursor: not-allowed;
+        svg {
+          path:first-child {
+            fill: $darkGrey;
+          }
+        }
       }
     }
   }
